@@ -1,7 +1,7 @@
 ## Interface: 50300
 ## Title: Lib: IGAS
 ## Author: kurapica.igas@gmail.com
-## Version: v40
+## Version: v41
 ## Notes: In-game addon system
 ## URL: http://github.com/kurapica
 ## DefaultState: Enabled
