@@ -30,73 +30,21 @@ class "UnitPanel"
 	-- Method
 	------------------------------------------------------
 	doc [======[
-		@name Refresh
+		@name InitWithNumber
 		@type method
-		@desc Refresh the unit panel
+		@desc Init the unit panel with a unit count
+		@param count number, the units count
 		@return nil
 	]======]
-	function Refresh(self)
-		if not self.__Deactivated then
-			return IFGroup.Refresh(self)
-		end
-	end
-
-	doc [======[
-		@name Activate
-		@type method
-		@desc Activate the unit panel
-		@return nil
-	]======]
-	function Activate(self)
-		if self.__Deactivated then
-			IFNoCombatTaskHandler._RegisterNoCombatTask(function()
-				self.__Deactivated = nil
-				return self:Refresh()
-			end)
-		end
-	end
-
-	doc [======[
-		@name Deactivate
-		@type method
-		@desc Deactivate the unit panel
-		@return nil
-	]======]
-	function Deactivate(self)
-		if not self.__Deactivated then
-			IFNoCombatTaskHandler._RegisterNoCombatTask(function()
-				self.__Deactivated = true
-
-				for i = 1, self.Count do
-					self.Element[i].Unit = nil
-				end
-
-				self:UpdatePanelSize()
-			end)
+	function InitWithCount(self, count)
+		for i = 1, count do
+			self.Element[i]:Hide()
 		end
 	end
 
 	------------------------------------------------------
 	-- Property
 	------------------------------------------------------
-	doc [======[
-		@name Activated
-		@type property
-		@desc Whether the unit panel is activated
-	]======]
-	property "Activated" {
-		Get = function(self)
-			return not self.__Deactivated
-		end,
-		Set = function(self, value)
-			if value then
-				self:Activate()
-			else
-				self:Deactivate()
-			end
-		end,
-		Type = Boolean,
-	}
 
 	------------------------------------------------------
 	-- Constructor
